Arreglando el scroll de nav en mobile

--- a/docs/output.css
+++ b/docs/output.css
@@ -928,6 +928,10 @@ video {
   height: 1.75rem;
 }
 
+.h-\[100dvh\] {
+  height: 100dvh;
+}
+
 .h-\[118px\] {
   height: 118px;
 }
@@ -942,10 +946,6 @@ video {
 
 .h-\[98px\] {
   height: 98px;
-}
-
-.h-screen {
-  height: 100vh;
 }
 
 .w-1\/2 {
@@ -1012,18 +1012,6 @@ video {
 
 .scroll-mt-\[64px\] {
   scroll-margin-top: 64px;
-}
-
-.scroll-mt-\[88px\] {
-  scroll-margin-top: 88px;
-}
-
-.scroll-mt-\[62px\] {
-  scroll-margin-top: 62px;
-}
-
-.scroll-mt-0 {
-  scroll-margin-top: 0px;
 }
 
 .place-items-center {
@@ -1296,12 +1284,6 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-colors {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .animate-delay-0 {
   animation-delay: 0ms;
 }
@@ -1414,10 +1396,6 @@ body {
     max-width: 704px;
   }
 
-  .md\:scroll-mt-\[88px\] {
-    scroll-margin-top: 88px;
-  }
-
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -1477,10 +1455,6 @@ body {
 
   .md\:font-medium {
     font-weight: 500;
-  }
-
-  .md\:font-normal {
-    font-weight: 400;
   }
 
   .md\:text-clr-neutral-900 {
