Se quitó el scroll de la navegación

--- a/docs/output.css
+++ b/docs/output.css
@@ -948,6 +948,10 @@ video {
   height: 98px;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -1064,6 +1068,14 @@ video {
 
 .justify-self-center {
   justify-self: center;
+}
+
+.overflow-auto {
+  overflow: auto;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .scroll-smooth {
