--- a/docs/output.css
+++ b/docs/output.css
@@ -1034,6 +1034,10 @@ video {
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
