--- a/docs/output.css
+++ b/docs/output.css
@@ -844,6 +844,10 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .invisible {
   visibility: hidden;
 }
@@ -870,6 +874,38 @@ video {
 
 .top-\[135px\] {
   top: 135px;
+}
+
+.top-\[58px\] {
+  top: 58px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.-bottom-10 {
+  bottom: -2.5rem;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.bottom-\[-10px\] {
+  bottom: -10px;
+}
+
+.bottom-\[-20px\] {
+  bottom: -20px;
+}
+
+.bottom-\[-25px\] {
+  bottom: -25px;
+}
+
+.bottom-\[-23px\] {
+  bottom: -23px;
 }
 
 .z-10 {
@@ -948,8 +984,8 @@ video {
   height: 98px;
 }
 
-.h-screen {
-  height: 100vh;
+.h-full {
+  height: 100%;
 }
 
 .w-1\/2 {
@@ -974,6 +1010,18 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-screen {
+  width: 100vw;
 }
 
 .max-w-\[1880px\] {
@@ -1255,6 +1303,11 @@ video {
   font-weight: 600;
 }
 
+.text-clr-error {
+  --tw-text-opacity: 1;
+  color: hsl(337 42% 54% / var(--tw-text-opacity));
+}
+
 .text-clr-neutral-100 {
   --tw-text-opacity: 1;
   color: hsl(0 0% 100% / var(--tw-text-opacity));
@@ -1482,8 +1535,16 @@ body {
 }
 
 @media (min-width: 1296px) {
+  .xl\:top-14 {
+    top: 3.5rem;
+  }
+
   .xl\:top-\[133px\] {
     top: 133px;
+  }
+
+  .xl\:bottom-\[-25px\] {
+    bottom: -25px;
   }
 
   .xl\:m-0 {
